# tollbooth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  example.py  pyproject.toml
.github/workflows/: publish.yml
examples/: general.py
examples/challenges/: character_captcha.py  circle_captcha.py  navigator_attestation.py  rotation_captcha.py  sha256.py  sha256_balloon.py  sliding_captcha.py  third_party_captcha.py
examples/integrations/: asgi.py  django_app.py  falcon_app.py  fastapi_app.py  flask_app.py  starlette_app.py  wsgi.py
tests/: test_blocklist.py  test_e2e.py  test_engine.py  test_integrations.py  test_middleware.py  test_redis.py
tollbooth/: __init__.py  blocklist.py  engine.py  redis.py  rules.json
tollbooth/challenges/: __init__.py  base.py  character_captcha.py  image_captcha.py  rotation_captcha.py  sha256.py  sha256_balloon.py  sliding_captcha.py  third_party_captcha.py
tollbooth/challenges/templates/: character_captcha.html  circle_captcha.html  image_captcha.html  rotation_captcha.html  sha256.html  sha256_balloon.html  sliding_captcha.html  third_party_captcha.html
tollbooth/extras/: __init__.py  error_handler.py  third_party_captcha.py
tollbooth/integrations/: __init__.py  base.py  django.py  falcon.py  fastapi.py  flask.py  starlette.py
