[project]
name = "tollbooth"
version = "0.3.1.2"
description = "A bot-challenge Python middleware issuing brief challenges, granting solvers signed access cookies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
keywords = ["bot", "captcha", "proof-of-work", "middleware", "rate-limiting", "challenge", "balloon-hashing", "wsgi", "asgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/libcaptcha/tollbooth"
Repository = "https://github.com/libcaptcha/tollbooth"
"Bug Tracker" = "https://github.com/libcaptcha/tollbooth/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]
django = ["django>=4.0"]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100"]
falcon = ["falcon>=3.0"]
starlette = ["starlette>=0.27"]
redis = ["redis>=5.0"]
image = ["Pillow>=10.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tollbooth*"]

[tool.setuptools.package-data]
tollbooth = ["rules.json"]
"tollbooth.challenges" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: downloads full dataset (~23MB)"]
